# auto-decompress

./: .gitignore  README.md  auto-decompress.cabal  t.hs
Data/: AutoDecompress.hs
Data/AutoDecompress/: Transform.hs
