name:                auto-decompress
version:             0.1
synopsis:            Automatically decompress files
description:         Use the "magic number" to determine the compression type,
                     and decompress using a pipe automatically
license:             GPL
license-file:        COPYING
author:              David Powell
maintainer:          David Powell <david@drp.id.au>

cabal-version:       >= 1.2
build-type:          Simple


executable        t
  main-is:             t.hs
  ghc-options:         -threaded -W -O2

Library
  exposed-modules:     Data.AutoDecompress, Data.AutoDecompress.Transform
  ghc-options:         -threaded -W -O2
  build-depends:       base,
                       bytestring,
                       unix,
                       process,
                       splice
